--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.android.donutapp">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-
-    <permission android:name="com.example.android.DONUTAPP"/>
-
-    <uses-permission android:name="android.permission.DONUTAPP"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,14 +14,20 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+            <receiver android:name=".MyReceiver">
+                <intent-filter>
+                    <action android:name="com.example.android.donutapp.SEND_BROAD_CAST"/>
+                </intent-filter>
+            </receiver>
+
         </activity>
 
         <provider
-            android:authorities="com.example.android.donutapp"
             android:name=".DBProvider"
+            android:authorities="com.example.android.DONUTAPP"
             android:exported="true">
         </provider>
 
